--- a/themes/SuSE/po/ru.po
+++ b/themes/SuSE/po/ru.po
@@ -148,10 +148,10 @@ msgstr ""
 #. txt_insert_disk3
 #, c-format
 msgid ""
-"This is not a SUSE LINUX 9.2 Boot Disk.\n"
+"This is not a SUSE LINUX 9.3 Boot Disk.\n"
 "Please insert Boot Disk %u."
 msgstr ""
-"\"Это не SUSE LINUX 9.2 загрузочный диск.\n"
+"\"Это не SUSE LINUX 9.3 загрузочный диск.\n"
 "Пожалуйста вставьте загрузочный диск %u."
 
 # password dialog title
@@ -270,5 +270,10 @@ msgstr "Установка по HTTP"
 # 'driver' as in '(hardware) driver update'
 #. txt_driver_update
 msgid "Driver"
+msgstr ""
+
+# as in Windows Authentication Domain
+#. txt_domain
+msgid "Domain\n"
 msgstr ""
 
