--- a/themes/SuSE/po/bootloader.pot
+++ b/themes/SuSE/po/bootloader.pot
@@ -8,7 +8,7 @@ msgstr ""
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <i18n@suse.de>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=utf8\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 # ok button label
@@ -127,7 +127,7 @@ msgstr ""
 #. txt_insert_disk3
 #, c-format
 msgid ""
-"This is not a SUSE LINUX 9.2 Boot Disk.\n"
+"This is not a SUSE LINUX 9.3 Boot Disk.\n"
 "Please insert Boot Disk %u."
 msgstr ""
 
@@ -231,5 +231,10 @@ msgstr ""
 # 'driver' as in '(hardware) driver update'
 #. txt_driver_update
 msgid "Driver"
+msgstr ""
+
+# as in Windows Authentication Domain
+#. txt_domain
+msgid "Domain\n"
 msgstr ""
 
