--- a/themes/SuSE/po/de.po
+++ b/themes/SuSE/po/de.po
@@ -1,18 +1,19 @@
+# translation of de.po to 
 # translation of de.po to German
 # LANGUAGE translations for boot loader
 # Copyright (C) 2004 SUSE LINUX AG
-# Antje Faber <afaber@suse.de>, 2004.
+# Antje Faber <afaber@suse.de>, 2004, 2005.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: de\n"
-"PO-Revision-Date: 2004-03-09.28:37GMT\n"
-"Last-Translator: Antje Faber <afaber@suse.de>\n"
-"Language-Team: German <i18n@suse.de>\n"
+"PO-Revision-Date: 2005-03-11 18:31+0100\n"
+"Last-Translator: Antje Faber\n"
+"Language-Team:  <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.0.2\n"
+"X-Generator: KBabel 1.9\n"
 
 # ok button label
 #. txt_ok
@@ -134,10 +135,10 @@ msgstr ""
 #. txt_insert_disk3
 #, c-format
 msgid ""
-"This is not a SUSE LINUX 9.2 Boot Disk.\n"
+"This is not a SUSE LINUX 9.3 Boot Disk.\n"
 "Please insert Boot Disk %u."
 msgstr ""
-"Dies ist keine SUSE LINUX 9.2-Bootdiskette.\n"
+"Dies ist keine SUSE LINUX 9.3-Bootdiskette.\n"
 "Legen Sie die Bootdiskette %u ein."
 
 # password dialog title
@@ -245,4 +246,9 @@ msgstr "HTTP-Installation"
 #. txt_driver_update
 msgid "Driver"
 msgstr "Treiber"
+
+# as in Windows Authentication Domain
+#. txt_domain
+msgid "Domain\n"
+msgstr "Domain\n"
 
