--- a/themes/SuSE/po/es.po
+++ b/themes/SuSE/po/es.po
@@ -1,18 +1,20 @@
-# translation of bootloader.po to 
+# translation of es.po to 
+# translation of bootloader.po to
 # LANGUAGE translations for boot loader
 # Copyright (C) 2004 SUSE LINUX AG
 # , 2004
+# Ines Pozo <Ines.Pozo@novell.com>, 2005.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: bootloader\n"
-"PO-Revision-Date: 2004-03-17 16:37+0100\n"
-"Last-Translator: \n"
+"Project-Id-Version: es\n"
+"PO-Revision-Date: 2005-03-07 10:09+0100\n"
+"Last-Translator: Ines Pozo <Ines.Pozo@novell.com>\n"
 "Language-Team:  <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.0.1\n"
+"X-Generator: KBabel 1.3.1\n"
 
 # ok button label
 #. txt_ok
@@ -134,10 +136,10 @@ msgstr ""
 #. txt_insert_disk3
 #, c-format
 msgid ""
-"This is not a SUSE LINUX 9.2 Boot Disk.\n"
+"This is not a SUSE LINUX 9.3 Boot Disk.\n"
 "Please insert Boot Disk %u."
 msgstr ""
-"Este no es un disquete de arranque de SUSE LINUX 9.2.\n"
+"Este no es un disquete de arranque de SUSE LINUX 9.3.\n"
 "Por favor, introduzca el disquete de arranque %u."
 
 # password dialog title
@@ -244,5 +246,10 @@ msgstr "Instalación HTTP"
 # 'driver' as in '(hardware) driver update'
 #. txt_driver_update
 msgid "Driver"
-msgstr ""
+msgstr "Controlador"
+
+# as in Windows Authentication Domain
+#. txt_domain
+msgid "Domain\n"
+msgstr "Dominio\n"
 
