--- a/themes/SuSE/po/fr.po
+++ b/themes/SuSE/po/fr.po
@@ -1,3 +1,4 @@
+# translation of fr.po to 
 # translation of fr.po to français
 # translation of bootloader.fr.po to Français
 # translation of bootloader.po to Français
@@ -5,17 +6,18 @@
 # Copyright (C) 2004 SUSE LINUX AG
 # Patricia Vaz <Patricia.Vaz@suse.de>, 2004.
 # Patricia Vaz <patricia.vaz@suse.com>, 2004.
+# Patricia Vaz <patricia@suse.de>, 2005.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: fr\n"
-"PO-Revision-Date: 2004-09-15 14:01+0200\n"
-"Last-Translator: Patricia Vaz <patricia.vaz@suse.com>\n"
-"Language-Team: français <fr@li.org>\n"
+"PO-Revision-Date: 2005-03-07 09:49+0100\n"
+"Last-Translator: Patricia Vaz <patricia@suse.de>\n"
+"Language-Team:  <fr@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.3.1\n"
+"X-Generator: KBabel 1.9\n"
 
 # ok button label
 #. txt_ok
@@ -137,10 +139,10 @@ msgstr ""
 #. txt_insert_disk3
 #, c-format
 msgid ""
-"This is not a SUSE LINUX 9.2 Boot Disk.\n"
+"This is not a SUSE LINUX 9.3 Boot Disk.\n"
 "Please insert Boot Disk %u."
 msgstr ""
-"Ceci n'est pas une disquette d'amorçage SUSE LINUX 9.2.\n"
+"Ceci n'est pas une disquette d'amorçage SUSE LINUX 9.3.\n"
 "Veuillez insérer la disquette d'amorçage %u."
 
 # password dialog title
@@ -248,4 +250,9 @@ msgstr "Installation HTTP"
 #. txt_driver_update
 msgid "Driver"
 msgstr "Pilote"
+
+# as in Windows Authentication Domain
+#. txt_domain
+msgid "Domain\n"
+msgstr "Domaine\n"
 
