--- a/themes/SuSE/po/hu.po
+++ b/themes/SuSE/po/hu.po
@@ -1,19 +1,21 @@
+# translation of hu.po to Hungarian
 # translation of bootloader.hu.po to hungarian
 # translation of bootloader.po to hungarian
 # LANGUAGE translations for boot loader
 # Copyright (C) 2004 SUSE LINUX AG
 # Marcel Hilzinger <marcel.hilzinger@suselinux.hu>, 2004.
+# Szabolcs Varga <shirokuma@shirokuma.hu>, 2004, 2005.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: bootloader.hu\n"
-"PO-Revision-Date: 2004-03-21 19:08+0100\n"
-"Last-Translator: Marcel Hilzinger <marcel.hilzinger@suselinux.hu>\n"
-"Language-Team: hungarian <hu@li.org>\n"
+"Project-Id-Version: hu\n"
+"PO-Revision-Date: 2005-03-09 11:34+0100\n"
+"Last-Translator: Szabolcs Varga <shirokuma@shirokuma.hu>\n"
+"Language-Team: Hungarian <hu@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.0.2\n"
+"X-Generator: KBabel 1.3.1\n"
 
 # ok button label
 #. txt_ok
@@ -95,13 +97,25 @@ msgstr "Indítás..."
 
 # Keep the three newlines!
 #. txt_load_kernel
-msgid "Loading Linux Kernel\n\n\n"
-msgstr "A Linux rendszermag betöltése\n\n\n"
+msgid ""
+"Loading Linux Kernel\n"
+"\n"
+"\n"
+msgstr ""
+"A Linux rendszermag betöltése\n"
+"\n"
+"\n"
 
 # Keep the three newlines!
 #. txt_load_memtest
-msgid "Loading memtest86\n\n\n"
-msgstr "A memtest86 program betöltése\n\n\n"
+msgid ""
+"Loading memtest86\n"
+"\n"
+"\n"
+msgstr ""
+"A memtest86 program betöltése\n"
+"\n"
+"\n"
 
 # info box title
 #. txt_info_title
@@ -135,10 +149,10 @@ msgstr ""
 #. txt_insert_disk3
 #, c-format
 msgid ""
-"This is not a SUSE LINUX 9.2 Boot Disk.\n"
+"This is not a SUSE LINUX 9.3 Boot Disk.\n"
 "Please insert Boot Disk %u."
 msgstr ""
-"Ez nem egy SUSE LINUX 9.2 indítólemez.\n"
+"Ez nem egy SUSE LINUX 9.3 indítólemez.\n"
 "Kérem, helyezze be a(z) %u indítólemezt."
 
 # password dialog title
@@ -148,8 +162,14 @@ msgstr "Jelszó"
 
 # Keep the newlines and spaces after ':'!
 #. txt_password
-msgid "Please enter your password:   \n\n\n"
-msgstr "Kérem, adja meg a jelszót:   \n\n\n"
+msgid ""
+"Please enter your password:   \n"
+"\n"
+"\n"
+msgstr ""
+"Kérem, adja meg a jelszót:   \n"
+"\n"
+"\n"
 
 #. txt_dud_ready
 msgid "Please get your Driver Update Floppy ready."
@@ -158,24 +178,31 @@ msgstr "Kérem, készítse elő a frissítéseket tartalmazó meghajtólemezt."
 # dvd warning title
 #. txt_dvd_warning_title
 msgid "You're almost there..."
-msgstr "Majdnem..."
+msgstr "Már majdnem kész..."
 
 # Keep the newlines!
 #. txt_dvd_warning
 msgid ""
-"\n\nIt appears that the system booted from the second side of the DVD.\n"
+"\n"
+"\n"
+"It appears that the system booted from the second side of the DVD.\n"
 "If so, turn the DVD over and try again."
 msgstr ""
-"\n\nÚgy tűnik, hogy a telepítéshez a DVD második oldalát használta.\n"
+"\n"
+"\n"
+"Úgy tűnik, hogy a telepítéshez a DVD második oldalát használta.\n"
 "Ha igen, cserélje a DVD-t, és próbálja újból."
 
 #. txt_dvd_warning2
 msgid ""
-"This is a two-sided DVD. You have booted from the second side.\n\n"
+"This is a two-sided DVD. You have booted from the second side.\n"
+"\n"
 "Please turn the DVD over, then continue."
 msgstr ""
-"Ez egy duplaoldalas DVD. Ön a rendszerindításhoz a második oldalt használta.\n\n"
-"Kérem, fordítsa a DVD-t, majd folytassa."
+"Ez egy duplaoldalas DVD. Ön a rendszerindításhoz a második oldalt "
+"használta.\n"
+"\n"
+"Kérem, fordítsa meg a DVD-t, majd folytassa."
 
 # power off dialog title
 #. txt_power_off_title
@@ -246,4 +273,9 @@ msgstr "HTTP telepítés"
 #. txt_driver_update
 msgid "Driver"
 msgstr ""
+
+# as in Windows Authentication Domain
+#. txt_domain
+msgid "Domain\n"
+msgstr "Tartomány\n"
 
