--- a/themes/SuSE/po/it.po
+++ b/themes/SuSE/po/it.po
@@ -1,4 +1,5 @@
 # translation of it.po to 
+# translation of it.po to
 # translation of bootloader.po to
 # translation of bootloader.po to
 # LANGUAGE translations for boot loader
@@ -18,11 +19,12 @@
 # , 2004.
 # , 2004.
 # , 2004.
+# , 2005.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: it\n"
-"PO-Revision-Date: 2004-09-13 14:38+0200\n"
+"PO-Revision-Date: 2005-03-12 11:38+0100\n"
 "Last-Translator: \n"
 "Language-Team:  <it@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -150,10 +152,10 @@ msgstr ""
 #. txt_insert_disk3
 #, c-format
 msgid ""
-"This is not a SUSE LINUX 9.2 Boot Disk.\n"
+"This is not a SUSE LINUX 9.3 Boot Disk.\n"
 "Please insert Boot Disk %u."
 msgstr ""
-"Questo non è un dischetto di boot SUSE LINUX 9.2.\n"
+"Questo non è un dischetto di boot SUSE LINUX 9.3.\n"
 "Inserire il dischetto di boot %u."
 
 # password dialog title
@@ -261,4 +263,9 @@ msgstr "Installazione HTTP"
 #. txt_driver_update
 msgid "Driver"
 msgstr "Driver"
+
+# as in Windows Authentication Domain
+#. txt_domain
+msgid "Domain\n"
+msgstr "Domino\n"
 
