--- a/themes/SuSE/po/ja.po
+++ b/themes/SuSE/po/ja.po
@@ -4,9 +4,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: bootloader\n"
-"PO-Revision-Date: 2004-03-30 19.28+0200\n"
-"Last-Translator: Takekazu Okamoto <tokamoto@novell.com>\n"
-"Language-Team: Japanese <i18n@suse.de>\n"
+"PO-Revision-Date: 2004-03-30 19.38+0200\n"
+"Last-Translator: Craig Jeffares <cjeffares@novell.com>\n"
+"Language-Team: Novell Language <language@novell.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -131,10 +131,10 @@ msgstr ""
 #. txt_insert_disk3
 #, c-format
 msgid ""
-"This is not a SUSE LINUX 9.2 Boot Disk.\n"
+"This is not a SUSE LINUX 9.3 Boot Disk.\n"
 "Please insert Boot Disk %u."
 msgstr ""
-"これはSUSE LINUX 9.2のブートディスクではありません。\n"
+"これはSUSE LINUX 9.3のブートディスクではありません。\n"
 "ブートディスク %u を挿入してください。"
 
 # password dialog title
@@ -244,5 +244,10 @@ msgstr "HTTPインストール"
 # 'driver' as in '(hardware) driver update'
 #. txt_driver_update
 msgid "Driver"
-msgstr ""
+msgstr "ドライバ" 
+
+# as in Windows Authentication Domain
+#. txt_domain
+msgid "Domain\n"
+msgstr "ドメイン\n" 
 
