--- a/themes/SuSE/po/ro.po
+++ b/themes/SuSE/po/ro.po
@@ -134,10 +134,10 @@ msgstr ""
 #. txt_insert_disk3
 #, c-format
 msgid ""
-"This is not a SUSE LINUX 9.2 Boot Disk.\n"
+"This is not a SUSE LINUX 9.3 Boot Disk.\n"
 "Please insert Boot Disk %u."
 msgstr ""
-"Acesta nu este un disc de pornire SUSE LINUX 9.2.\n"
+"Acesta nu este un disc de pornire SUSE LINUX 9.3.\n"
 "Inseraţi discul %u."
 
 # password dialog title
@@ -244,5 +244,10 @@ msgstr "Instalare prin HTTP"
 # 'driver' as in '(hardware) driver update'
 #. txt_driver_update
 msgid "Driver"
+msgstr ""
+
+# as in Windows Authentication Domain
+#. txt_domain
+msgid "Domain\n"
 msgstr ""
 
