--- a/themes/SuSE/po/sv.po
+++ b/themes/SuSE/po/sv.po
@@ -134,10 +134,10 @@ msgstr ""
 #. txt_insert_disk3
 #, c-format
 msgid ""
-"This is not a SUSE LINUX 9.2 Boot Disk.\n"
+"This is not a SUSE LINUX 9.3 Boot Disk.\n"
 "Please insert Boot Disk %u."
 msgstr ""
-"Det här är inte en Suse Linux 9.2-startdisk.\n"
+"Det här är inte en Suse Linux 9.3-startdisk.\n"
 "Sätt i startdisk %u."
 
 # password dialog title
@@ -244,5 +244,10 @@ msgstr "HTTP-installation"
 # 'driver' as in '(hardware) driver update'
 #. txt_driver_update
 msgid "Driver"
+msgstr ""
+
+# as in Windows Authentication Domain
+#. txt_domain
+msgid "Domain\n"
 msgstr ""
 
