--- a/themes/SuSE/po/zh_TW.po
+++ b/themes/SuSE/po/zh_TW.po
@@ -131,10 +131,10 @@ msgstr ""
 #. txt_insert_disk3
 #, c-format
 msgid ""
-"This is not a SUSE LINUX 9.2 Boot Disk.\n"
+"This is not a SUSE LINUX 9.3 Boot Disk.\n"
 "Please insert Boot Disk %u."
 msgstr ""
-"這不是 SUSE LINUX 9.2 開機磁片。\n"
+"這不是 SUSE LINUX 9.3 開機磁片。\n"
 "請插入開機磁片 %u。" 
 
 # password dialog title
@@ -242,6 +242,14 @@ msgstr "HTTP 安裝"
 #. txt_driver_update
 msgid "Driver"
 msgstr "驅動程式" 
+
+
+
+
+# as in Windows Authentication Domain
+#. txt_domain
+msgid "Domain\n"
+msgstr "領域\n" 
 
 
 
