[gfxboot] - prepare for next version.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gfxboot (3.1.0-2) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 11 Aug 2005 12:30:36 +0200
+
 gfxboot (3.1.0-1) unstable; urgency=low
 
   * New upstream release:
