--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,11 @@
-gfxboot (3.1.0-2) UNRELEASED; urgency=low
+gfxboot (3.1.0-2) unstable; urgency=low
 
-  * NOT RELEASED YET
   * re- phrase short description.
+  * fix lintian errors.
+  * remove lintian overrides,
+  * add new documentation.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 11 Aug 2005 13:00:02 +0200
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 11 Aug 2005 13:16:28 +0200
 
 gfxboot (3.1.0-1) unstable; urgency=low
 
