--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,39 @@
+15/9/2005:	v3.2.0
+	- better testing script
+	- gcc 4.1 compile fixes
+
+9/9/2005:	v3.1.8
+	- oops, was already December
+
+5/9/2005:	v3.1.7
+	- Finnish texts updated
+
+31/8/2005:	v3.1.6
+	- fix color handling bug (#72232)
+	- show penguins a bit more often
+
+29/8/2005:	v3.1.5
+	- added more keymaps (#113265)
+	- long menus are wrapped
+	- added 640x480 fallback for i845-like boards
+	- new translations
+
+24/8/2005:	v3.1.4
+	- a different shade of blue
+	- fixed penguin theme drawing bug
+
+22/8/2005:	v3.1.3
+	- new translations
+
+22/8/2005:	v3.1.2
+	- prepare for jpeg decompression to 8-bit color space
+	- add penguin theme
+	- Dansk keymap added
+
+15/8/2005:	v3.1.1
+	- fixed Dansk locale (#104084)
+	- new translations added
+
 5/8/2005:	v3.1.0
 	- support images with alpha channel
 	- new theme
