--- a/themes/SuSE/po/bg.po
+++ b/themes/SuSE/po/bg.po
@@ -1,4 +1,4 @@
-# translation of bg.po to 
+# translation of bg.po to
 # translation of bg.po to Bulgarian
 # translation of bootloader.po to Bulgarian
 # LANGUAGE translations for boot loader
@@ -10,13 +10,13 @@ msgid ""
 msgstr ""
 "Project-Id-Version: bg\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2005-03-07 15:40+0200\n"
+"PO-Revision-Date: 2005-08-18 21:29+0300\n"
 "Last-Translator: Borislav Mitev <morbid_viper@tkzs.org>\n"
-"Language-Team:  <en@li.org>\n"
+"Language-Team: Bulgarian <bg@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.9\n"
+"X-Generator: KBabel 1.10\n"
 
 # ok button label
 #. txt_ok
@@ -47,17 +47,14 @@ msgid "Manual Installation"
 msgstr "Ръчно инсталиране"
 
 #. txt_noacpi_install
-#, fuzzy
 msgid "Installation--ACPI Disabled"
 msgstr "Инсталиране - без ACPI"
 
 #. txt_safe_install
-#, fuzzy
 msgid "Installation--Safe Settings"
 msgstr "Инсталиране - Безопасни настройки"
 
 #. txt_safe_linux
-#, fuzzy
 msgid "Linux--Safe Settings"
 msgstr "Linux - безопасни настройки"
 
@@ -80,7 +77,7 @@ msgstr "Параметри на зареждането"
 # window title for exit dialog
 #. txt_exit_title (see txt_exit_dialog)
 msgid "Exiting..."
-msgstr ""
+msgstr "Излизане..."
 
 #. txt_exit_dialog
 msgid ""
@@ -137,12 +134,12 @@ msgid "Change Boot Disk"
 msgstr "Промяна на диска за зареждане"
 
 #. txt_insert_disk
-#, fuzzy, c-format
+#, c-format
 msgid "Insert boot disk %u."
 msgstr "Моля, поставете зареждащ диск %u."
 
 #. txt_insert_disk2
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "This is boot disk %u.\n"
 "Insert boot disk %u."
@@ -152,7 +149,7 @@ msgstr ""
 
 # <product> is e.g. SuSE Linux X.Y or Enterprise Server Z
 #. txt_insert_disk3
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "This is not a <product> boot disk.\n"
 "Please insert boot disk %u."
@@ -167,7 +164,6 @@ msgstr "Парола"
 
 # Keep the newlines and spaces after ':'!
 #. txt_password
-#, fuzzy
 msgid ""
 "Enter your password:   \n"
 "\n"
@@ -178,14 +174,13 @@ msgstr ""
 "\n"
 
 #. txt_dud_ready
-#, fuzzy
 msgid "Get your driver update floppy ready."
-msgstr "Моля, пригответе Вашата дискета с драйвери за подновяване."
+msgstr "Пригответе дискетата с драйверите за подновяване."
 
 # dvd warning title
 #. txt_dvd_warning_title
 msgid "DVD Error"
-msgstr ""
+msgstr "DVD грешка"
 
 # Keep the newlines!
 #. txt_dvd_warning
@@ -201,23 +196,21 @@ msgstr ""
 "Ако е така, обърнете го и опитайте отново."
 
 #. txt_dvd_warning2
-#, fuzzy
 msgid ""
 "This is a two-sided DVD. You have booted from the second side.\n"
 "\n"
 "Turn the DVD over then continue."
 msgstr ""
 "Това е двустранно DVD. Вие сте заредили от втората страна\n"
+"\n"
 "Моля, обърнете DVD-то и след това продължете."
 
 # power off dialog title
 #. txt_power_off_title
-#, fuzzy
 msgid "Power Off"
 msgstr "Изключване на захранването"
 
 #. txt_power_off
-#, fuzzy
 msgid "Halt the system now?"
 msgstr "Желаете ли да спрете сега системата?"
 
@@ -290,10 +283,10 @@ msgstr "Домейн\n"
 # button label for other/more options
 #. txt_other_options
 msgid "Other Options"
-msgstr ""
+msgstr "Други параметри"
 
 # label for language selection
 #. txt_language
 msgid "Language"
-msgstr ""
+msgstr "Език"
 
