--- a/themes/SuSE/po/cs.po
+++ b/themes/SuSE/po/cs.po
@@ -1,3 +1,4 @@
+# translation of cs.po to Czech
 # translation of cs.po to cs_CZ
 # translation of bootloader.po to cs_CZ
 # LANGUAGE translations for boot loader
@@ -7,15 +8,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: cs\n"
-"PO-Revision-Date: 2005-03-03 15:01+0100\n"
+"PO-Revision-Date: 2005-07-31 18:24+0200\n"
 "Last-Translator: Klara Cihlarova <koty@seznam.cz>\n"
-"Language-Team: cs_CZ <cs@li.org>\n"
+"Language-Team: Czech <suse@suse.cz>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.9\n"
-"Plural-Forms:  nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%"
-"10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"X-Generator: KBabel 1.10.1\n"
+"Plural-Forms:  nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
 
 # ok button label
 #. txt_ok
@@ -46,19 +46,16 @@ msgid "Manual Installation"
 msgstr "Ruční instalace"
 
 #. txt_noacpi_install
-#, fuzzy
 msgid "Installation--ACPI Disabled"
-msgstr "Instalace - bez ACPI"
+msgstr "Instalace -- bez ACPI"
 
 #. txt_safe_install
-#, fuzzy
 msgid "Installation--Safe Settings"
-msgstr "Instalace - bezpečné nastavení"
+msgstr "Instalace -- bezpečné nastavení"
 
 #. txt_safe_linux
-#, fuzzy
 msgid "Linux--Safe Settings"
-msgstr "Linux - bezpečné nastavení"
+msgstr "Linux -- bezpečné nastavení"
 
 #. txt_boot_harddisk
 msgid "Boot from Hard Disk"
@@ -79,7 +76,7 @@ msgstr "Parametry startu"
 # window title for exit dialog
 #. txt_exit_title (see txt_exit_dialog)
 msgid "Exiting..."
-msgstr ""
+msgstr "Ukončuji..."
 
 #. txt_exit_dialog
 msgid ""
@@ -100,7 +97,6 @@ msgstr "Startuji..."
 
 # Keep the three newlines!
 #. txt_load_kernel
-#, fuzzy
 msgid ""
 "Loading Linux Kernel\n"
 "\n"
@@ -137,22 +133,22 @@ msgid "Change Boot Disk"
 msgstr "Změnit startovací disk"
 
 #. txt_insert_disk
-#, fuzzy, c-format
+#, c-format
 msgid "Insert boot disk %u."
-msgstr "Vložte disk %u."
+msgstr "Vložte startovací disk %u."
 
 #. txt_insert_disk2
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "This is boot disk %u.\n"
 "Insert boot disk %u."
 msgstr ""
-"Toto je disk %u.\n"
+"Toto je startovací disk %u.\n"
 "Vložte prosím disk %u."
 
 # <product> is e.g. SuSE Linux X.Y or Enterprise Server Z
 #. txt_insert_disk3
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "This is not a <product> boot disk.\n"
 "Please insert boot disk %u."
@@ -167,7 +163,6 @@ msgstr "Heslo"
 
 # Keep the newlines and spaces after ':'!
 #. txt_password
-#, fuzzy
 msgid ""
 "Enter your password:   \n"
 "\n"
@@ -178,14 +173,13 @@ msgstr ""
 "\n"
 
 #. txt_dud_ready
-#, fuzzy
 msgid "Get your driver update floppy ready."
 msgstr "Připravte si disketu s ovladači."
 
 # dvd warning title
 #. txt_dvd_warning_title
 msgid "DVD Error"
-msgstr ""
+msgstr "Chyba DVD"
 
 # Keep the newlines!
 #. txt_dvd_warning
@@ -201,7 +195,6 @@ msgstr ""
 "Obraťte DVD a opakujte akci."
 
 #. txt_dvd_warning2
-#, fuzzy
 msgid ""
 "This is a two-sided DVD. You have booted from the second side.\n"
 "\n"
@@ -213,12 +206,10 @@ msgstr ""
 
 # power off dialog title
 #. txt_power_off_title
-#, fuzzy
 msgid "Power Off"
 msgstr "Vypnout"
 
 #. txt_power_off
-#, fuzzy
 msgid "Halt the system now?"
 msgstr "Chcete nyní vypnout systém?"
 
@@ -291,10 +282,10 @@ msgstr "Doména\n"
 # button label for other/more options
 #. txt_other_options
 msgid "Other Options"
-msgstr ""
+msgstr "Další volby"
 
 # label for language selection
 #. txt_language
 msgid "Language"
-msgstr ""
+msgstr "Jazyk"
 
