--- a/themes/SuSE/po/nl.po
+++ b/themes/SuSE/po/nl.po
@@ -1,19 +1,22 @@
+# translation of bootloader.po to Nederlands
 # translation of bootloader.po to Dutch
 # translation of nl.po to Dutch
 # LANGUAGE translations for boot loader
 # Copyright (C) 2004 SUSE LINUX AG
+# Proefgelezen op 10-08-2005 door Henk Krus
 # Arthur & Ettie Kerkmeester <a.s.kerkmeester@hccnet.nl>, 2004, 2005.
-#
+# Rinse de Vries <rinsedevries@kde.nl>, 2005.
 msgid ""
 msgstr ""
 "Project-Id-Version: nl\n"
-"PO-Revision-Date: 2005-03-07 21:51+0100\n"
-"Last-Translator: Arthur & Ettie Kerkmeester <a.s.kerkmeester@hccnet.nl>\n"
-"Language-Team: Dutch <i18n@suse.de>\n"
+"PO-Revision-Date: 2005-08-10 00:45+0200\n"
+"Last-Translator: Rinse de Vries <rinsedevries@kde.nl>\n"
+"Language-Team: Dutch <kde-i18n-nl@kde.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.10\n"
+"X-Generator: KBabel 1.10.2\n"
+"Plural-Forms:  nplurals=2; plural=(n != 1);\n"
 
 # ok button label
 #. txt_ok
@@ -44,23 +47,20 @@ msgid "Manual Installation"
 msgstr "Handmatige installatie"
 
 #. txt_noacpi_install
-#, fuzzy
 msgid "Installation--ACPI Disabled"
 msgstr "Installatie - ACPI uitgeschakeld"
 
 #. txt_safe_install
-#, fuzzy
 msgid "Installation--Safe Settings"
-msgstr "Installatie - veilige instellingen"
+msgstr "Installatie - Veilige instellingen"
 
 #. txt_safe_linux
-#, fuzzy
 msgid "Linux--Safe Settings"
-msgstr "Linux - veilige instellingen"
+msgstr "Linux - Veilige instellingen"
 
 #. txt_boot_harddisk
 msgid "Boot from Hard Disk"
-msgstr "Van harddisk booten"
+msgstr "Van harde schijf opstarten"
 
 #. txt_rescue
 msgid "Rescue System"
@@ -72,20 +72,20 @@ msgstr "Geheugentest"
 
 #. txt_bootoptions
 msgid "Boot Options"
-msgstr "Boot opties"
+msgstr "Opstartopties"
 
 # window title for exit dialog
 #. txt_exit_title (see txt_exit_dialog)
 msgid "Exiting..."
-msgstr ""
+msgstr "Beëindigen..."
 
 #. txt_exit_dialog
 msgid ""
 "You are leaving the graphical boot menu and\n"
 "starting the text mode interface."
 msgstr ""
-"U gaat het grafische bootmenu verlaten en\n"
-"de tekstmode interface wordt nu opgestart."
+"U gaat het grafische opstartmenu verlaten en\n"
+"de interface wordt nu opgestart in tekstmodus."
 
 #. txt_help
 msgid "Help"
@@ -103,7 +103,7 @@ msgid ""
 "\n"
 "\n"
 msgstr ""
-"Linux kernel wordt nu geladen\n"
+"Linux-kernel wordt geladen\n"
 "\n"
 "\n"
 
@@ -114,7 +114,7 @@ msgid ""
 "\n"
 "\n"
 msgstr ""
-"Memtest86 wordt nu geladen\n"
+"Memtest86 wordt geladen\n"
 "\n"
 "\n"
 
@@ -126,36 +126,36 @@ msgstr "Bootloader"
 # error box title
 #. txt_error_title
 msgid "I/O error"
-msgstr "I/O fout"
+msgstr "I/O-fout"
 
 # boot disk change dialog title
 #. txt_change_disk_title
 msgid "Change Boot Disk"
-msgstr "Wijzig bootdisk"
+msgstr "Opstartdiskette wijzigen"
 
 #. txt_insert_disk
-#, fuzzy, c-format
+#, c-format
 msgid "Insert boot disk %u."
-msgstr "Plaats bootdisk %u."
+msgstr "Plaats opstartdiskette %u."
 
 #. txt_insert_disk2
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "This is boot disk %u.\n"
 "Insert boot disk %u."
 msgstr ""
-"Dit is bootdisk %u.\n"
-"Plaats bootdisk %u aub."
+"Dit is opstartdiskette %u.\n"
+"Plaats a.u.b. opstartdiskette %u."
 
 # <product> is e.g. SuSE Linux X.Y or Enterprise Server Z
 #. txt_insert_disk3
-#, fuzzy, c-format
+#, c-format
 msgid ""
 "This is not a <product> boot disk.\n"
 "Please insert boot disk %u."
 msgstr ""
-"Dit is geen <product> bootdisk.\n"
-"Plaats bootdisk %u aub."
+"Dit is geen opstartdiskette van <product>.\n"
+"Plaats a.u.b. opstartdiskette %u."
 
 # password dialog title
 #. txt_password_title
@@ -164,25 +164,23 @@ msgstr "Wachtwoord"
 
 # Keep the newlines and spaces after ':'!
 #. txt_password
-#, fuzzy
 msgid ""
 "Enter your password:   \n"
 "\n"
 "\n"
 msgstr ""
-"Geef aub uw wachtwoord op:   \n"
+"Voer uw wachtwoord in:   \n"
 "\n"
 "\n"
 
 #. txt_dud_ready
-#, fuzzy
 msgid "Get your driver update floppy ready."
-msgstr "Houdt aub uw driver update floppy gereed."
+msgstr "Houdt uw diskette met de stuurprogramma-update gereed."
 
 # dvd warning title
 #. txt_dvd_warning_title
 msgid "DVD Error"
-msgstr ""
+msgstr "DVD-fout"
 
 # Keep the newlines!
 #. txt_dvd_warning
@@ -194,45 +192,41 @@ msgid ""
 msgstr ""
 "\n"
 "\n"
-"Het lijkt er op dat het systeem met kant twee van de DVD geboot is.\n"
-"Als dat het geval is: draai de DVD dan even om en probeer het nog eens een "
-"keer."
+"Het lijkt er op dat het systeem met kant twee van de DVD opgestart is.\n"
+"Indien dit het geval is: draai de DVD om en probeer het nog eens."
 
 #. txt_dvd_warning2
-#, fuzzy
 msgid ""
 "This is a two-sided DVD. You have booted from the second side.\n"
 "\n"
 "Turn the DVD over then continue."
 msgstr ""
-"Dit is een dubbelzijdige DVD. U heeft met kant twee geboot.\n"
+"Dit is een dubbelzijdige DVD. U heeft met kant twee opgestart.\n"
 "\n"
-"Draai de DVD aub om en gaat u dan verder."
+"Draai de DVD om en gaat dan verder."
 
 # power off dialog title
 #. txt_power_off_title
-#, fuzzy
 msgid "Power Off"
-msgstr "Power uit"
+msgstr "Computer uitgeschakeld"
 
 #. txt_power_off
-#, fuzzy
 msgid "Halt the system now?"
 msgstr "Wilt u nu het systeem stoppen?"
 
 # menu entry for hard disk installation
 #. txt_harddisk
 msgid "Hard Disk"
-msgstr "Harddisk"
+msgstr "Harde schijf "
 
 # dialog title for hard disk installation
 #. txt_harddisk_title
 msgid "Hard Disk Installation"
-msgstr "Harddisk installatie"
+msgstr "Installatie van harde schijf"
 
 #. txt_hd_diskdevice
 msgid "Disk Device (scan all disks if empty)\n"
-msgstr "Disk apparaat (indien leeg: zoek dan op alle disks)\n"
+msgstr "Schijfapparaat (indien leeg: zoek dan op alle schijven)\n"
 
 #. txt_directory
 msgid "Directory\n"
@@ -241,7 +235,7 @@ msgstr "Directory\n"
 # dialog title for ftp installation
 #. txt_ftp_title
 msgid "FTP Installation"
-msgstr "FTP installatie"
+msgstr "FTP-installatie"
 
 #. txt_server
 msgid "Server\n"
@@ -259,7 +253,7 @@ msgstr "Gebruiker (indien leeg: anonieme aanmelding)\n"
 # dialog title for nfs installation
 #. txt_nfs_title
 msgid "NFS Installation"
-msgstr "NFS installatie"
+msgstr "NFS-installatie"
 
 # label for smb user input
 #. txt_user2
@@ -274,12 +268,12 @@ msgstr "SMB (Windows share) installatie"
 # dialog title for http installation
 #. txt_http_title
 msgid "HTTP Installation"
-msgstr "HTTP installatie"
+msgstr "HTTP-installatie"
 
 # 'driver' as in '(hardware) driver update'
 #. txt_driver_update
 msgid "Driver"
-msgstr "Driver"
+msgstr "Stuurprogramma"
 
 # as in Windows Authentication Domain
 #. txt_domain
@@ -289,10 +283,10 @@ msgstr "Domein\n"
 # button label for other/more options
 #. txt_other_options
 msgid "Other Options"
-msgstr ""
+msgstr "Andere opties"
 
 # label for language selection
 #. txt_language
 msgid "Language"
-msgstr ""
+msgstr "Taal"
 
