--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gfxboot (3.2.6-2) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 31 Dec 2005 03:09:07 +0100
+
 gfxboot (3.2.6-1) unstable; urgency=low
 
   * New upstream release
