--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,23 @@
+14/2/2006:	v3.2.11
+	- add apic boot option (#150030)
+
+9/2/2006:	v3.2.10
+	- more defensive monitor detection (#149578)
+	- monitor detection can be skipped
+
+26/1/2006:	v3.2.9
+	- go for 8 bit framebuffer if there are no 16 bit modes (#144742)
+
+23/1/2006:	v3.2.8
+	- better monitor detection
+	- cjwatson@ubuntu.com: support big-endian cpio archives (#140119)
+	- support direct driverupdate loading from CD-ROM (feat #152)
+	- add new languages
+
+16/1/2006:	v3.2.7
+	- show all options in grub/lilo (#136377)
+	- translations & font updated
+
 14/12/2005:	v3.2.6
 	- fixed to work correctly with grub & lilo
 
