--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-gfxboot (3.2.6-2) UNRELEASED; urgency=low
+gfxboot (3.2.11-1) UNRELEASED; urgency=low
 
-  * NOT RELEASED YET
+  * (NOT RELEASED YET) New upstream release
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sat, 31 Dec 2005 03:09:07 +0100
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 16 Feb 2006 11:24:29 +0100
 
 gfxboot (3.2.6-1) unstable; urgency=low
 
