--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-gfxboot (3.2.11-1) UNRELEASED; urgency=low
+gfxboot (3.2.11-1) unstable; urgency=low
 
-  * (NOT RELEASED YET) New upstream release
+  * New upstream release
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 16 Feb 2006 11:24:29 +0100
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 16 Feb 2006 11:27:22 +0100
 
 gfxboot (3.2.6-1) unstable; urgency=low
 
