[gfxboot] - prepare next version.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gfxboot (3.2.11-2) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 16 Feb 2006 11:29:52 +0100
+
 gfxboot (3.2.11-1) unstable; urgency=low
 
   * New upstream release
