--- a/themes/SuSE/po/el.po
+++ b/themes/SuSE/po/el.po
@@ -279,3 +279,11 @@ msgstr "Γλώσσα"
 msgid "Installation--IOAPIC Enabled"
 msgstr ""
 
+#. txt_noapic_install
+msgid "Installation--IOAPIC Disabled"
+msgstr "Εγκατάσταση--IOAPIC Απενεργοποιημένο"
+
+#. txt_nolapic_install
+msgid "Installation--Local APIC Disabled"
+msgstr ""
+
