--- a/themes/SuSE/po/es.po
+++ b/themes/SuSE/po/es.po
@@ -274,7 +274,16 @@ msgstr "Otras opciones"
 #. txt_language
 msgid "Language"
 msgstr "Idioma"
+
 #. txt_apic
 msgid "Installation--IOAPIC Enabled"
+msgstr ""
+
+#. txt_noapic_install
+msgid "Installation--IOAPIC Disabled"
+msgstr "Instalación -- IOAPIC inhabilitado"
+
+#. txt_nolapic_install
+msgid "Installation--Local APIC Disabled"
 msgstr ""
 
