--- a/themes/SuSE/po/fr.po
+++ b/themes/SuSE/po/fr.po
@@ -278,7 +278,16 @@ msgstr "Autres options"
 #. txt_language
 msgid "Language"
 msgstr "Langue"
+
 #. txt_apic
 msgid "Installation--IOAPIC Enabled"
+msgstr ""
+
+#. txt_noapic_install
+msgid "Installation--IOAPIC Disabled"
+msgstr "Installation - IOAPIC désactivé"
+
+#. txt_nolapic_install
+msgid "Installation--Local APIC Disabled"
 msgstr ""
 
