--- a/themes/SuSE/po/zh_CN.po
+++ b/themes/SuSE/po/zh_CN.po
@@ -269,7 +269,16 @@ msgstr "其他选项"
 #. txt_language
 msgid "Language"
 msgstr "语言"
+
 #. txt_apic
 msgid "Installation--IOAPIC Enabled"
+msgstr ""
+
+#. txt_noapic_install
+msgid "Installation--IOAPIC Disabled"
+msgstr "安装 － 禁用 IOAPIC"
+
+#. txt_nolapic_install
+msgid "Installation--Local APIC Disabled"
 msgstr ""
 
