--- a/Changelog
+++ b/Changelog
@@ -1,3 +1,15 @@
+6/3/2006:	v3.2.14
+	- new theme, cont.
+	- it's now nolapic (#155280)
+	- translations updated
+
+28/2/2006:	v3.2.13
+	- drop dosemu as testing platform
+	- new theme, first try
+
+21/2/2006:	v3.2.12
+	- add noapic boot option (#150030)
+
 14/2/2006:	v3.2.11
 	- add apic boot option (#150030)
 
