--- a/themes/SuSE/po/bootloader.pot
+++ b/themes/SuSE/po/bootloader.pot
@@ -247,3 +247,11 @@ msgstr ""
 msgid "Installation--IOAPIC Enabled"
 msgstr ""
 
+#. txt_noapic_install
+msgid "Installation--IOAPIC Disabled"
+msgstr ""
+
+#. txt_nolapic_install
+msgid "Installation--Local APIC Disabled"
+msgstr ""
+
