--- a/themes/SuSE/po/ja.po
+++ b/themes/SuSE/po/ja.po
@@ -268,7 +268,16 @@ msgstr "その他のオプション"
 #. txt_language
 msgid "Language"
 msgstr "言語"
+
 #. txt_apic
 msgid "Installation--IOAPIC Enabled"
+msgstr ""
+
+#. txt_noapic_install
+msgid "Installation--IOAPIC Disabled"
+msgstr "インストール -- IOAPIC無効"
+
+#. txt_nolapic_install
+msgid "Installation--Local APIC Disabled"
 msgstr ""
 
