--- a/themes/SuSE/po/nl.po
+++ b/themes/SuSE/po/nl.po
@@ -281,3 +281,11 @@ msgstr "Taal"
 msgid "Installation--IOAPIC Enabled"
 msgstr ""
 
+#. txt_noapic_install
+msgid "Installation--IOAPIC Disabled"
+msgstr "Installatie - IOAPIC uitgeschakeld"
+
+#. txt_nolapic_install
+msgid "Installation--Local APIC Disabled"
+msgstr ""
+
