--- a/themes/SuSE/po/ro.po
+++ b/themes/SuSE/po/ro.po
@@ -285,3 +285,11 @@ msgstr ""
 msgid "Installation--IOAPIC Enabled"
 msgstr ""
 
+#. txt_noapic_install
+msgid "Installation--IOAPIC Disabled"
+msgstr "Instalare - IOAPIC dezactivat"
+
+#. txt_nolapic_install
+msgid "Installation--Local APIC Disabled"
+msgstr ""
+
