--- a/themes/SuSE/po/sk.po
+++ b/themes/SuSE/po/sk.po
@@ -289,3 +289,11 @@ msgstr ""
 msgid "Installation--IOAPIC Enabled"
 msgstr ""
 
+#. txt_noapic_install
+msgid "Installation--IOAPIC Disabled"
+msgstr "Inštalácia - IOAPIC vypnuté"
+
+#. txt_nolapic_install
+msgid "Installation--Local APIC Disabled"
+msgstr ""
+
