--- a/themes/SuSE/po/zh_TW.po
+++ b/themes/SuSE/po/zh_TW.po
@@ -269,7 +269,16 @@ msgstr "其他選項"
 #. txt_language
 msgid "Language"
 msgstr "語言"
+
 #. txt_apic
 msgid "Installation--IOAPIC Enabled"
+msgstr ""
+
+#. txt_noapic_install
+msgid "Installation--IOAPIC Disabled"
+msgstr "安裝 -- 關閉 IOAPIC"
+
+#. txt_nolapic_install
+msgid "Installation--Local APIC Disabled"
 msgstr ""
 
