--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+gfxboot (3.2.14-2) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu,  9 Mar 2006 17:13:22 +0100
+
 gfxboot (3.2.14-1) unstable; urgency=low
 
   * New upstream release:
