--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+gfxboot (3.2.14-3) UNRELEASED; urgency=low
+
+  * NOT RELEASED YET
+  * bump compat level to 5.
+
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 12 Mar 2006 00:08:48 +0100
+
 gfxboot (3.2.14-2) unstable; urgency=low
 
   * add Ubuntu changes from Colin Watson <cjwatson@ubuntu.com>:
@@ -10,7 +17,7 @@ gfxboot (3.2.14-2) unstable; urgency=low
     upstream, the SuSE theme is still included and alternative themes are
     appearing.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 10 Mar 2006 11:59:34 +0100
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 12 Mar 2006 00:08:41 +0100
 
 gfxboot (3.2.14-1) unstable; urgency=low
 
