--- a/themes/SuSE/po/hu.po
+++ b/themes/SuSE/po/hu.po
@@ -3,20 +3,23 @@
 # translation of bootloader.po to hungarian
 # LANGUAGE translations for boot loader
 # Copyright (C) 2004 SUSE LINUX AG
+# Kéménczy Kálmán, 2006.
 # Marcel Hilzinger <marcel.hilzinger@suselinux.hu>, 2004.
 # Szabolcs Varga <shirokuma@shirokuma.hu>, 2004, 2005.
+# Kalman Kemenczy <kkemenczy@novell.com>, 2006.
+# Kéménczy Kálmán <kkemenczy@novell.com>, 2006.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: hu\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2005-08-04 14:17+0100\n"
-"Last-Translator: Szabolcs Varga <shirokuma@shirokuma.hu>\n"
-"Language-Team: Hungarian <hu@li.org>\n"
+"PO-Revision-Date: 2006-03-21 16:04+0100\n"
+"Last-Translator: Kéménczy Kálmán <kkemenczy@novell.com>\n"
+"Language-Team: Hungarian <en@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.3.1\n"
+"X-Generator: KBabel 1.10.2\n"
 
 # ok button label
 #. txt_ok
@@ -226,7 +229,7 @@ msgstr "FTP telepítés"
 
 #. txt_server
 msgid "Server\n"
-msgstr "Szerver\n"
+msgstr "Kiszolgáló\n"
 
 #. txt_password
 msgid "Password\n"
@@ -279,7 +282,7 @@ msgstr "Nyelv"
 
 #. txt_apic
 msgid "Installation--IOAPIC Enabled"
-msgstr ""
+msgstr "Telepítés - IOAPIC támogatással"
 
 #. txt_noapic_install
 msgid "Installation--IOAPIC Disabled"
@@ -287,5 +290,23 @@ msgstr "Telepítés - IOAPIC támogatás nélkül"
 
 #. txt_nolapic_install
 msgid "Installation--Local APIC Disabled"
+msgstr "Telepítés - Local APIC támogatás nélkül"
+
+#. txt_yes
+msgid "Yes"
+msgstr "Igen"
+
+#. txt_no
+msgid "No"
+msgstr "Nem"
+
+# menu item for selecting a file
+#. txt_file
+msgid "File"
+msgstr ""
+
+# input label: share as in "Windows share" (SMB)
+#. txt_share
+msgid "Share\n"
 msgstr ""
 
