--- a/themes/SuSE/po/fi.po
+++ b/themes/SuSE/po/fi.po
@@ -9,7 +9,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: fi\n"
-"PO-Revision-Date: 2006-04-03 09:28+0300\n"
+"PO-Revision-Date: 2006-04-18 10:06+0300\n"
 "Last-Translator: Jyri Palokangas <jmp@netti.fi>\n"
 "Language-Team: suomi <yast-trans-fi@kotoistaminen.novell.fi>\n"
 "MIME-Version: 1.0\n"
@@ -299,10 +299,43 @@ msgstr "Ei"
 # menu item for selecting a file
 #. txt_file
 msgid "File"
-msgstr ""
+msgstr "Tiedosto"
 
 # input label: share as in "Windows share" (SMB)
 #. txt_share
 msgid "Share\n"
+msgstr "Jako\n"
+
+#. txt_zenAuto
+msgid "Automatic mode"
+msgstr ""
+
+#. txt_zenManual
+msgid "Manual mode"
+msgstr ""
+
+#. txt_zenConfig
+msgid "Configure parameters on ZEN partition"
+msgstr ""
+
+#. txt_zenInstall
+msgid "Install/Update ZEN partition"
+msgstr ""
+
+#. txt_zenLilo
+msgid "Reinstall ZEN partition boot loader"
+msgstr ""
+
+#. txt_zenDisable
+msgid "Disable ZEN partition"
+msgstr ""
+
+#. txt_zenEnable
+msgid "Enable ZEN partition"
+msgstr ""
+
+# video mode menu item
+#. txt_text_mode
+msgid "Text Mode"
 msgstr ""
 
