--- a/themes/SuSE/po/cs.po
+++ b/themes/SuSE/po/cs.po
@@ -1,22 +1,19 @@
-# translation of cs.po to Czech
 # translation of cs.po to cs_CZ
-# translation of bootloader.po to cs_CZ
 # LANGUAGE translations for boot loader
 # Copyright (C) 2004 SUSE LINUX AG
-# Klara Cihlarova <koty@seznam.cz>, 2004, 2005, 2006.
 #
+# Klara Cihlarova <koty@seznam.cz>, 2004, 2005, 2006.
 msgid ""
 msgstr ""
 "Project-Id-Version: cs\n"
-"PO-Revision-Date: 2006-03-21 20:42+0100\n"
+"PO-Revision-Date: 2006-05-25 13:11+0200\n"
 "Last-Translator: Klara Cihlarova <koty@seznam.cz>\n"
-"Language-Team: Czech <suse@suse.cz>\n"
+"Language-Team: cs_CZ <cs@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.10.2\n"
-"Plural-Forms:  nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && n%"
-"10<=4 && (n%100<10 || n%100>=20) ? 1 : 2);\n"
+"X-Generator: KBabel 1.11.2\n"
+"Plural-Forms:  nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
 
 # ok button label
 #. txt_ok
@@ -300,10 +297,43 @@ msgstr "Ne"
 # menu item for selecting a file
 #. txt_file
 msgid "File"
-msgstr ""
+msgstr "Soubor"
 
 # input label: share as in "Windows share" (SMB)
 #. txt_share
 msgid "Share\n"
+msgstr "Sdílení\n"
+
+#. txt_zenAuto
+msgid "Automatic mode"
+msgstr "Automatický režim"
+
+#. txt_zenManual
+msgid "Manual mode"
+msgstr "Ruční režim"
+
+#. txt_zenConfig
+msgid "Configure parameters on ZEN partition"
+msgstr "Nastavit parametry pro ZEN oddíly"
+
+#. txt_zenInstall
+msgid "Install/Update ZEN partition"
+msgstr "Instalovat/aktualizovat ZEN oddíly"
+
+#. txt_zenLilo
+msgid "Reinstall ZEN partition boot loader"
+msgstr "Reinstalovat zavaděč ZEN oddílu"
+
+#. txt_zenDisable
+msgid "Disable ZEN partition"
+msgstr "Zakázat ZEN oddíl"
+
+#. txt_zenEnable
+msgid "Enable ZEN partition"
+msgstr "Povolit ZEN oddíl"
+
+# video mode menu item
+#. txt_text_mode
+msgid "Text Mode"
 msgstr ""
 
