--- a/themes/SuSE/po/fr.po
+++ b/themes/SuSE/po/fr.po
@@ -11,7 +11,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: fr\n"
-"PO-Revision-Date: 2005-03-07 09:49+0100\n"
+"PO-Revision-Date: 2006-06-01 08:45\n"
 "Last-Translator: Novell Language <language@novell.com>\n"
 "Language-Team: Novell Language <language@novell.com>\n"
 "MIME-Version: 1.0\n"
@@ -81,12 +81,8 @@ msgid "Exiting..."
 msgstr "Sortie..."
 
 #. txt_exit_dialog
-msgid ""
-"You are leaving the graphical boot menu and\n"
-"starting the text mode interface."
-msgstr ""
-"Vous quittez le menu d'amorçage graphique et\n"
-"démarrez l'interface en mode textuel."
+msgid "You are leaving the graphical boot menu and\nstarting the text mode interface."
+msgstr "Vous quittez le menu d'amorçage graphique et\ndémarrez l'interface en mode textuel."
 
 #. txt_help
 msgid "Help"
@@ -99,25 +95,13 @@ msgstr "Démarrage..."
 
 # Keep the three newlines!
 #. txt_load_kernel
-msgid ""
-"Loading Linux Kernel\n"
-"\n"
-"\n"
-msgstr ""
-"Chargement du noyau Linux\n"
-"\n"
-"\n"
+msgid "Loading Linux Kernel\n\n\n"
+msgstr "Chargement du noyau Linux\n\n\n"
 
 # Keep the three newlines!
 #. txt_load_memtest
-msgid ""
-"Loading memtest86\n"
-"\n"
-"\n"
-msgstr ""
-"Chargement de memtest86\n"
-"\n"
-"\n"
+msgid "Loading memtest86\n\n\n"
+msgstr "Chargement de memtest86\n\n\n"
 
 # info box title
 #. txt_info_title
@@ -141,22 +125,14 @@ msgstr "Insérer le disque d'amorçage %u."
 
 #. txt_insert_disk2
 #, c-format
-msgid ""
-"This is boot disk %u.\n"
-"Insert boot disk %u."
-msgstr ""
-"Il s'agit du disque d'amorçage %u.\n"
-"Insérer le disque d'amorçage %u."
+msgid "This is boot disk %u.\nInsert boot disk %u."
+msgstr "Il s'agit du disque d'amorçage %u.\nInsérer le disque d'amorçage %u."
 
 # <product> is e.g. SuSE Linux X.Y or Enterprise Server Z
 #. txt_insert_disk3
 #, c-format
-msgid ""
-"This is not a <product> boot disk.\n"
-"Please insert boot disk %u."
-msgstr ""
-"Ce n'est pas un disque d'amorçage <product>.\n"
-"Insérez le disque d'amorçage %u."
+msgid "This is not a <product> boot disk.\nPlease insert boot disk %u."
+msgstr "Ce n'est pas un disque d'amorçage <product>.\nInsérez le disque d'amorçage %u."
 
 # password dialog title
 #. txt_password_title
@@ -165,14 +141,8 @@ msgstr "Mot de passe"
 
 # Keep the newlines and spaces after ':'!
 #. txt_password
-msgid ""
-"Enter your password:   \n"
-"\n"
-"\n"
-msgstr ""
-"Entrez votre mot de passe :   \n"
-"\n"
-"\n"
+msgid "Enter your password:   \n\n\n"
+msgstr "Entrez votre mot de passe :   \n\n\n"
 
 #. txt_dud_ready
 msgid "Get your driver update floppy ready."
@@ -184,15 +154,8 @@ msgid "DVD Error"
 msgstr "Erreur DVD"
 
 #. txt_dvd_warning2
-msgid ""
-"This is a two-sided DVD. You have booted from the second side.\n"
-"\n"
-"Turn the DVD over then continue."
-msgstr ""
-"Il s'agit d'un DVD double face. Vous avez effectué l'amorçage à partir de la "
-"seconde face.\n"
-"\n"
-"Retournez le DVD, puis continuez."
+msgid "This is a two-sided DVD. You have booted from the second side.\n\nTurn the DVD over then continue."
+msgstr "Il s'agit d'un DVD double face. Vous avez effectué l'amorçage à partir de la seconde face.\n\nRetournez le DVD, puis continuez."
 
 # power off dialog title
 #. txt_power_off_title
@@ -281,7 +244,7 @@ msgstr "Langue"
 
 #. txt_apic
 msgid "Installation--IOAPIC Enabled"
-msgstr ""
+msgstr "Installation - IOAPIC activé"
 
 #. txt_noapic_install
 msgid "Installation--IOAPIC Disabled"
@@ -289,14 +252,12 @@ msgstr "Installation - IOAPIC désactivé"
 
 #. txt_nolapic_install
 msgid "Installation--Local APIC Disabled"
-msgstr ""
+msgstr "Installation - APIC local désactivé"
 
-# TLABEL linuxrc_2002_03_29_0036__2
 #. txt_yes
 msgid "Yes"
 msgstr "Oui"
 
-# TLABEL linuxrc_2002_03_29_0036__3
 #. txt_no
 msgid "No"
 msgstr "Non"
@@ -304,10 +265,43 @@ msgstr "Non"
 # menu item for selecting a file
 #. txt_file
 msgid "File"
-msgstr ""
+msgstr "Fichier"
 
 # input label: share as in "Windows share" (SMB)
 #. txt_share
 msgid "Share\n"
+msgstr "Partage\n"
+
+#. txt_zenAuto
+msgid "Automatic mode"
+msgstr "Mode automatique"
+
+#. txt_zenManual
+msgid "Manual mode"
+msgstr "Mode manuel"
+
+#. txt_zenConfig
+msgid "Configure parameters on ZEN partition"
+msgstr "Configurer les paramètres sur la partition ZEN"
+
+#. txt_zenInstall
+msgid "Install/Update ZEN partition"
+msgstr "Installer/mettre à jour la partition ZEN"
+
+#. txt_zenLilo
+msgid "Reinstall ZEN partition boot loader"
+msgstr "Réinstaller le chargeur d'amorçage de la partition ZEN"
+
+#. txt_zenDisable
+msgid "Disable ZEN partition"
+msgstr "Désactiver la partition ZEN"
+
+#. txt_zenEnable
+msgid "Enable ZEN partition"
+msgstr "Activer la partition ZEN"
+
+# video mode menu item
+#. txt_text_mode
+msgid "Text Mode"
 msgstr ""
 
