--- a/themes/SuSE/po/pt_BR.po
+++ b/themes/SuSE/po/pt_BR.po
@@ -4,7 +4,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: bootloader\n"
-"PO-Revision-Date: 2004-03-01 12:00+0200\n"
+"PO-Revision-Date: 2006-06-01 14:17\n"
 "Last-Translator: Novell Language <language@novell.com>\n"
 "Language-Team: Novell Language <language@novell.com>\n"
 "MIME-Version: 1.0\n"
@@ -73,12 +73,8 @@ msgid "Exiting..."
 msgstr "Saindo..."
 
 #. txt_exit_dialog
-msgid ""
-"You are leaving the graphical boot menu and\n"
-"starting the text mode interface."
-msgstr ""
-"Você está saindo do menu de boot gráfico\n"
-"e iniciando a interface em modo de texto."
+msgid "You are leaving the graphical boot menu and\nstarting the text mode interface."
+msgstr "Você está saindo do menu de boot gráfico\ne iniciando a interface em modo de texto."
 
 #. txt_help
 msgid "Help"
@@ -91,25 +87,13 @@ msgstr "Iniciando..."
 
 # Keep the three newlines!
 #. txt_load_kernel
-msgid ""
-"Loading Linux Kernel\n"
-"\n"
-"\n"
-msgstr ""
-"Carregando Kernel do Linux\n"
-"\n"
-"\n"
+msgid "Loading Linux Kernel\n\n\n"
+msgstr "Carregando Kernel do Linux\n\n\n"
 
 # Keep the three newlines!
 #. txt_load_memtest
-msgid ""
-"Loading memtest86\n"
-"\n"
-"\n"
-msgstr ""
-"Carregando memtest86\n"
-"\n"
-"\n"
+msgid "Loading memtest86\n\n\n"
+msgstr "Carregando memtest86\n\n\n"
 
 # info box title
 #. txt_info_title
@@ -133,22 +117,14 @@ msgstr "Inserir disco de boot %u."
 
 #. txt_insert_disk2
 #, c-format
-msgid ""
-"This is boot disk %u.\n"
-"Insert boot disk %u."
-msgstr ""
-"Este é o disco de boot %u.\n"
-"Insira o disco de boot %u."
+msgid "This is boot disk %u.\nInsert boot disk %u."
+msgstr "Este é o disco de boot %u.\nInsira o disco de boot %u."
 
 # <product> is e.g. SuSE Linux X.Y or Enterprise Server Z
 #. txt_insert_disk3
 #, c-format
-msgid ""
-"This is not a <product> boot disk.\n"
-"Please insert boot disk %u."
-msgstr ""
-"Este não é o disco de boot do <product>.\n"
-"Insira o disco de boot %u."
+msgid "This is not a <product> boot disk.\nPlease insert boot disk %u."
+msgstr "Este não é o disco de boot do <product>.\nInsira o disco de boot %u."
 
 # password dialog title
 #. txt_password_title
@@ -157,14 +133,8 @@ msgstr "Senha"
 
 # Keep the newlines and spaces after ':'!
 #. txt_password
-msgid ""
-"Enter your password:   \n"
-"\n"
-"\n"
-msgstr ""
-"Digite sua senha:   \n"
-"\n"
-"\n"
+msgid "Enter your password:   \n\n\n"
+msgstr "Digite sua senha:   \n\n\n"
 
 #. txt_dud_ready
 msgid "Get your driver update floppy ready."
@@ -176,14 +146,8 @@ msgid "DVD Error"
 msgstr "Erro de DVD"
 
 #. txt_dvd_warning2
-msgid ""
-"This is a two-sided DVD. You have booted from the second side.\n"
-"\n"
-"Turn the DVD over then continue."
-msgstr ""
-"Este é um DVD com dois lados. Você fez a inicialização pelo segundo lado.\n"
-"\n"
-"Vire o DVD e continue."
+msgid "This is a two-sided DVD. You have booted from the second side.\n\nTurn the DVD over then continue."
+msgstr "Este é um DVD com dois lados. Você fez a inicialização pelo segundo lado.\n\nVire o DVD e continue."
 
 # power off dialog title
 #. txt_power_off_title
@@ -272,7 +236,7 @@ msgstr "Idioma"
 
 #. txt_apic
 msgid "Installation--IOAPIC Enabled"
-msgstr ""
+msgstr "Instalação--IOAPIC Habilitada"
 
 #. txt_noapic_install
 msgid "Installation--IOAPIC Disabled"
@@ -280,7 +244,7 @@ msgstr "Instalação--IOAPIC Desabilitada"
 
 #. txt_nolapic_install
 msgid "Installation--Local APIC Disabled"
-msgstr ""
+msgstr "Instalação--APIC Local Desabilitada"
 
 #. txt_yes
 msgid "Yes"
@@ -293,10 +257,43 @@ msgstr "Não"
 # menu item for selecting a file
 #. txt_file
 msgid "File"
-msgstr ""
+msgstr "Arquivo"
 
 # input label: share as in "Windows share" (SMB)
 #. txt_share
 msgid "Share\n"
+msgstr "Compartilhamento\n"
+
+#. txt_zenAuto
+msgid "Automatic mode"
+msgstr "Modo Automático"
+
+#. txt_zenManual
+msgid "Manual mode"
+msgstr "Modo Manual"
+
+#. txt_zenConfig
+msgid "Configure parameters on ZEN partition"
+msgstr "Configurar parâmetros na partição ZEN"
+
+#. txt_zenInstall
+msgid "Install/Update ZEN partition"
+msgstr "Instalar/Atualizar partição ZEN"
+
+#. txt_zenLilo
+msgid "Reinstall ZEN partition boot loader"
+msgstr "Reinstalar o carregador de boot da partição ZEN"
+
+#. txt_zenDisable
+msgid "Disable ZEN partition"
+msgstr "Desabilitar partição ZEN"
+
+#. txt_zenEnable
+msgid "Enable ZEN partition"
+msgstr "Habilitar partição ZEN"
+
+# video mode menu item
+#. txt_text_mode
+msgid "Text Mode"
 msgstr ""
 
