gfxboot (3.3.18-1) unstable; urgency=low
  * New upstream release.
  * ABI incompatbile to gfxboot 3.2!
  * 01_x11libs.dpatch is no longer needed.
  * adapt patches.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun,  3 Dec 2006 15:05:20 +0100

--- a/debian/changelog
+++ b/debian/changelog
@@ -3,14 +3,9 @@ gfxboot (3.3.18-1) unstable; urgency=low
   * New upstream release.
   * ABI incompatbile to gfxboot 3.2!
   * 01_x11libs.dpatch is no longer needed.
+  * adapt patches.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun,  3 Dec 2006 14:58:52 +0100
-
-gfxboot (3.2.35-2) UNRELEASED; urgency=low
-
-  * NOT RELEASED YET
-
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed,  9 Aug 2006 12:22:05 +0200
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun,  3 Dec 2006 15:05:32 +0100
 
 gfxboot (3.2.35-1) unstable; urgency=low
 
